# Master-Thesis

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.py
CPP/: CMakeLists.txt  Odometry.h  README.md  camera.h  control.h  control_data1.txt  control_data2.txt  control_data3.txt  control_data4.txt  control_data5.txt  kinematics.h  learningwalk.h  main.cpp  myapriltag.h
CPP/Data/ControlData/: control_data1.txt  control_data2.txt  control_data3.txt  control_data4.txt  control_data5.txt
CPP/Data/GoingStraight/: Going_Straight_data1.txt  Going_Straight_data2.txt  Going_Straight_data3.txt  Going_Straight_data4.txt  Going_Straight_data5.txt
CPP/Data/StraightICO/: StraightICO_lr0.01_data1.txt  StraightICO_lr0.01_data2.txt  StraightICO_lr0.01_data3.txt  StraightICO_lr0.01_data4.txt  StraightICO_lr0.01_data5.txt
CPP/Data/TurningAround/: Turn_left_around_data1.txt  Turn_left_around_data2.txt  Turn_left_around_data3.txt  Turn_left_around_data4.txt  Turn_left_around_data5.txt  Turn_right_around_data1.txt  Turn_right_around_data2.txt  Turn_right_around_data3.txt  Turn_right_around_data4.txt  Turn_right_around_data5.txt
Python/: MobileNet.py  README.md  Test_logging  camera.py  control.py  kinematics.py  learningwalk.py  lidar.py  main.py  myapriltag.py  qr_code.py  rccar.py  test_code.py  yolo.py  yolov3.cfg
